welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:10: error: not found: value b
def noTriples(nums:Array[Int]): Boolean = {b= false
                                           ^noTriples:11: error: not found: value b
                                           for (i <- 0 to 9) {b = b || arraytri(n)}
                                                              ^noTriples:12: error: not found: value b
                                           return b} 
                                                  ^